Fix the align of header and hero sections
Removes the gap and change the justify content. Making the header and
the hero align correctly.

-gap: 120px was removed.
-justify-content: changed from space-around to space-between.

--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,8 @@ body {
 .header-container {
     background-color: #1F2937;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 24px 450px 120px;
-    gap: 120px;
 }
 
 .header-left {
